--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../basics.css">
     <link rel="stylesheet" href="../../normlize.css">
     <link rel="stylesheet" href="all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +13,10 @@
     <title>Document</title>
 </head>
 <body>
-    <i class="fa-solid fa-heart"></i>    
+<div class="parent">
+    <div class="container">
+        test
+    </div>
+</div>
 </body>
 </html>
