Refactor product management: remove rate field from product forms and functions, enhance image handling, and improve product display styling

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -13,11 +13,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 style="text-align: center;">Our products</h1>
     <div id="products-con">
         <div class="product">
-            <p> name: test1 </p>
-            <p> rate: 1 </p>
-            <p> price: 1 </p>
+            <a href="#">
+                <img src="https://iwlcsqhadirrwyisrejh.supabase.co/storage/v1/object/public/product-images/1742997027515-1774236_0.jpg">
+                <p>this is the first product</p>
+                <p class="price">500$</p>
+            </a>
         </div>
     </div>
     <script src="script.js"></script>
