Enhance product display: wrap product info in a container, adjust styling, and improve layout for better visual presentation

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -18,8 +18,10 @@
         <div class="product">
             <a href="#">
                 <img src="https://iwlcsqhadirrwyisrejh.supabase.co/storage/v1/object/public/product-images/1742997027515-1774236_0.jpg">
-                <p>this is the first product</p>
-                <p class="price">500$</p>
+                <div class="info-con">
+                    <p>this is the first product</p>
+                    <p class="price">500$</p>
+                </div>
             </a>
         </div>
     </div>
