reverse product display order in script

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -17,7 +17,7 @@
     <div id="products-con">
         <div class="product">
             <a href="#">
-                <img src="https://iwlcsqhadirrwyisrejh.supabase.co/storage/v1/object/public/product-images/1742997027515-1774236_0.jpg">
+                <img src="https://placehold.co/250x164">
                 <div class="info-con">
                     <p>this is the first product</p>
                     <p class="price">500$</p>
