Refactor product display: comment out product HTML structure, wrap image in a container, and update CSS for improved layout

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1 style="text-align: center;">Our products</h1>
     <div id="products-con">
-        <div class="product">
+        <!-- <div class="product">
             <a href="#">
                 <img src="https://placehold.co/250x164">
                 <div class="info-con">
@@ -23,7 +23,7 @@
                     <p class="price">500$</p>
                 </div>
             </a>
-        </div>
+        </div> -->
     </div>
     <script src="script.js"></script>
 </body>
