Refactor login styles: remove unused parent class, enhance container layout, and add username/password input styles

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -15,7 +15,19 @@
 <body>
     <div class="parent">
         <div class="container">
-            test
+            <div class="username_style">
+
+            <label for="username">username</label><br>
+            <input type="text" id="username" required>
+        </div>
+        <br>    
+            <div class="password_style">
+
+            <label for="password">password</label><br>
+            <input type="password" id="password" required>
+        </div>
+        <br>
+        <input type="submit" class="submit">
         </div>
     </div>
 </body>
