Enhance login and registration forms: add structure and styling for user input fields, including username, password, and email, to improve user experience.

--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -15,8 +15,45 @@
 <body>
     <div class="parent">
         <div class="container">
-            <i class="fa-solid fa-house"></i>
-            test
+            
+        <form action="">
+            <div class="main">
+                <div>
+                  <label for="first">First Name</label>
+                  <input type="text" id="first" required>
+                </div>
+                <br>
+                <div>
+                  <label for="last">Last Name</label>
+                  <input type="text" id="last" >
+                </div>
+                <br>
+                <div>
+                  <label for="mail">email</label >
+                  <input type="email" id="mail" required>
+                </div>
+                <br>
+                <div>
+                  <label for="username">username</label>
+                  <input type="text" id="username" required>
+                </div>
+                <br>
+                <div>
+                  <label for="password">password</label >
+                  <input type="password" id="password" required minlength="6">
+                </div>
+                <br>
+                <div>
+                  <label for="confirm">confirm password</label>
+                  <input type="password" id="confirm" required> 
+                </div>
+                <br>
+                <div class="chekbox">
+                <input type="submit" class="submit">
+                <input type="reset" class="reset">
+            </div>
+            </div>
+        </form>
         </div>
     </div>
 </body>
