--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -15,6 +15,8 @@
 <body>
     <div class="parent">
         <div class="container">
+            <form action="">
+            <div class="style">
             <div class="username_style">
 
             <label for="username">username</label><br>
@@ -29,6 +31,8 @@
         <br>
         <input type="submit" class="submit">
         </div>
+    </form>
+    </div>
     </div>
 </body>
 </html>
