Enhance login and registration forms: add autofocus to username and first name input fields, update button styles with hover effects and transitions for improved user experience.

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -20,7 +20,7 @@
             <div class="username_style">
 
             <label for="username">username</label><br>
-            <input type="text" id="username" required>
+            <input type="text" id="username" required autofocus>
         </div>
         <br>    
             <div class="password_style">
