--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -20,7 +20,7 @@
             <div class="main">
                 <div>
                   <label for="first">First Name</label>
-                  <input type="text" id="first" required>
+                  <input type="text" id="first" required autofocus>
                 </div>
                 <br>
                 <div>
@@ -49,10 +49,11 @@
                 </div>
                 <br>
                 <div class="chekbox">
-                <input type="submit" class="submit">
-                <input type="reset" class="reset">
+                  <input type="submit" class="submit">
+                  <input type="reset" class="reset">
+              </div>
             </div>
-            </div>
+         
         </form>
         </div>
     </div>
