Enhance login form: add "Remember me" checkbox, update button layout with sign up option, and improve styling for better user experience.

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -29,7 +29,15 @@
             <input type="password" id="password" required>
         </div>
         <br>
-        <input type="submit" class="submit">
+        <div class="chekbox">
+            <input type="submit" class="submit" value="Login">
+            <input type="button" value="sign up" class="signup" onclick="window.location.href='../register/index.html'">
+        </div>
+        <br>
+    <div class="remember">
+        <input type="checkbox" id="remember">
+        <label for="remember">Remember me</label><br>
+    </div>
         </div>
     </form>
     </div>
