Enhance login form: add "Remember me" checkbox, update sign up button functionality, and improve link styling for better user experience.

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -31,13 +31,15 @@
         <br>
         <div class="chekbox">
             <input type="submit" class="submit" value="Login">
-            <input type="button" value="sign up" class="signup" onclick="window.location.href='../register/index.html'">
+            <input type="button" value="sign up" class="signup" onclick="">
         </div>
         <br>
     <div class="remember">
         <input type="checkbox" id="remember">
         <label for="remember">Remember me</label><br>
     </div>
+    <br>
+    <a href="#">forget password</a> 
         </div>
     </form>
     </div>
