Enhance registration and login styles: update link colors for better visibility and user experience.

--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -49,9 +49,12 @@
                 </div>
                 <br>
                 <div class="chekbox">
-                  <input type="submit" class="submit">
+                  <input type="submit" class="submit" value="Register">
+
                   <input type="reset" class="reset">
               </div>
+              <br>
+              <a href="#">login</a>
             </div>
          
         </form>
