--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -15,6 +15,15 @@
 <body>
     <div class="parent">
         <div class="container">
+
+            <nav>
+                <a href="">link 1</a>
+                <a href="">link 1</a>
+                <a href="">link 1</a>
+                <a href="">link 1</a>
+                <a href="">link 1</a>
+                <a href="">link 1</a>
+            </nav>
             <form action="">
             <div class="style">
             <div class="username_style">
@@ -42,6 +51,18 @@
     <a href="#">forget password</a> 
         </div>
     </form>
+    <footer>
+        <div class="footer_style">
+            <p>Copyright &copy; 2023</p>
+            <p>All rights reserved</p>
+        </div>
+        <div class="social_media">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+    </footer>
     </div>
     </div>
 </body>
