Refactor login and register pages: update navigation structure, enhance footer visibility, and improve styling for consistency

--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -16,7 +16,7 @@
     <div class="parent">
         <div class="container">
           
-          <nav>
+          <nav style="display: none;">
             <a href="">link 1</a>
             <a href="">link 1</a>
             <a href="">link 1</a>
@@ -26,6 +26,7 @@
         </nav>   
         <form action="">
             <div class="main">
+              <h1 class="titel">Register</h1>
                 <div>
                   <label for="first">First Name</label>
                   <input type="text" id="first" required autofocus>
@@ -64,7 +65,7 @@
             </div>
          
         </form>
-        <footer>
+        <footer style="display: none;">
           <div class="footer_style">
               <p>Copyright &copy; 2023</p>
               <p>All rights reserved</p>
