--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -18,7 +18,8 @@
         <form action="">
               <h1 class="titel">Create Account</h1>
             <div class="feld">
-                <div>
+               <div>
+                <div class="spechal">
                   <label for="first">Full Name</label>
                   <input type="text" id="first" placeholder="Enter your full name" required autofocus>
                 </div>
@@ -27,6 +28,7 @@
                   <label for="mail">email</label >
                   <input type="email" id="mail" placeholder="Enter your email address" required>
                 </div>
+              </div>
                 <br>
                 <div>
                   <label for="username">username</label>
