--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -1,55 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../css/basics.css">
-    <link rel="stylesheet" href="../css/normlize.css">
-    <link rel="stylesheet" href="../css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/basics.css" />
+    <link rel="stylesheet" href="../css/normlize.css" />
+    <link rel="stylesheet" href="../css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
+      <nav>
     
-    <div class="form_style">
-        <div class="container">
-            <form action="">
-                    <h1 class="title">Log in</h1>
-            <div class="feld">
-                    <div class="username_style">
-
-                        <label for="username">Email</label><br>
-                        <input type="email" id="username" placeholder="Enter your Email address" required autofocus>
-                    </div>
-                    <br>
-                    <div class="password_style">
-
-                        <label for="password">Password</label><br>
-                        <input type="password" id="password" placeholder="Enter Your Password" required>
-                    </div>
-            </div>
-            <div class="forget">
-               <a href="">Forget password</a>
-            </div>
-                    <br>
-                    <div class="remember">
-                        <input type="checkbox" id="remember">
-                        <label for="remember">Remember me</label><br>
-                    </div>
-                    <div class="chekbox">
-                        <input type="submit" class="submit" value="Login">
-                    </div>
-                    <br>
-                        <p class="sign-up">Don't have an account? <a href="/register">Sign up</a></p>
-            </form>
+        <h2>Brand Name</h2>
+        <div class="links">
+          <span><a href="">🏠home</a></span>
+          <span><a href="">📑Categories</a></span>
+          <span><a href="">📦Sell item</a></span>
+          <span><a href="">👤My Account</a></span>
         </div>
-    </div>
-</body>
+      </nav>
+    
 
+    <div class="form_style">
+      <div class="container">
+        <form action="">
+          <h1 class="title">Log in</h1>
+          <div class="feld">
+            <div class="username_style">
+              <label for="username">Email</label><br />
+              <input
+                type="email"
+                id="username"
+                placeholder="Enter your Email address"
+                required
+                autofocus
+              />
+            </div>
+            <br />
+            <div class="password_style">
+              <label for="password">Password</label><br />
+              <input
+                type="password"
+                id="password"
+                placeholder="Enter Your Password"
+                required
+              />
+            </div>
+          </div>
+          <div class="forget">
+            <a href="">Forget password</a>
+          </div>
+          <br />
+          <div class="remember">
+            <input type="checkbox" id="remember" />
+            <label for="remember">Remember me</label><br />
+          </div>
+          <div class="chekbox">
+            <input type="submit" class="submit" value="Login" />
+          </div>
+          <br />
+          <p class="sign-up">
+            Don't have an account? <a href="/register">Sign up</a>
+          </p>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
