Enhance navigation and layout: update index.html with a dark theme attribute, restructure navigation for improved usability, and refine CSS styles for better responsiveness and aesthetics.

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../css/basics.css" />
     <link rel="stylesheet" href="../css/normlize.css" />
     <link rel="stylesheet" href="../css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
 
   <body>
       <nav>
-    
-        <h2>Brand Name</h2>
-        <div class="links">
-          <span><a href="">🏠home</a></span>
-          <span><a href="">📑Categories</a></span>
-          <span><a href="">📦Sell item</a></span>
-          <span><a href="">👤My Account</a></span>
+        <div class="nav-con">
+            <div class="logo">Pay&Pray</div>
+            <div class="right-side">
+                <ul>
+                    <li>
+                        <a>
+                            🏠Home
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            📦Sell Item
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            🔑Login
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            📃Register
+                        </a>
+                    </li>
+                </ul>
+                <button class="toggle-theme">🌙</button>
+                <i class="fa-solid fa-bars bars"></i>
+            </div>
         </div>
-      </nav>
+    </nav>
     
 
     <div class="form_style">
