--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -1,56 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en" data-theme="dark">
+  <head>
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/form-styles.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../css/basics.css">
     <link rel="stylesheet" href="../css/normlize.css">
     <link rel="stylesheet" href="../css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Document</title>
-</head>
-<body>
-    <div class="main">
-      <div class="container">
-        <form action="">
-              <h1 class="titel">Create Account</h1>
-            <div class="feld">
-                <div>
-                  <label for="first">Full Name</label>
-                  <input type="text" id="first" placeholder="Enter your full name" required autofocus>
-                </div>
-                <br>
-                <div>
-                  <label for="mail">email</label >
-                  <input type="email" id="mail" placeholder="Enter your email address" required>
-                </div>
-                <br>
-                <div>
-                  <label for="username">username</label>
-                  <input type="text" id="username" placeholder="Crate a username" required>
-                </div>
-                <br>
-                <div>
-                  <label for="password">password</label >
-                  <input type="password" id="password" placeholder="Create a password" required minlength="6">
-                </div>
-                <br>
-                <div>
-                  <label for="confirm">confirm password</label>
-                  <input type="password" id="confirm" placeholder="Confirm your password" required> 
-                </div>
-             </div>
-                <br>
-                <div class="chekbox">
-                  <input type="submit" class="submit" value="Register">
-              </div>
-              <br>
-              <p>Already have an acount ? <a href="#" class="sign">login</a></p>
-        </form>
+  </head>
+  <body>
+    <nav>
+      <div class="nav-con">
+        <div class="logo">Pay&Pray</div>
+        <div class="right-side">
+          <input type="checkbox" id="bars" class="nav-checkbox" />
+          <ul>
+            <li>
+              <a href="/home"> 🏠Home </a>
+            </li>
+            <li>
+              <a> 📦Sell Item </a>
+            </li>
+            <li>
+              <a> 🔑Login </a>
+            </li>
+            <li>
+              <a> 📃Register </a>
+            </li>
+          </ul>
+          <button class="toggle-theme">🔆</button>
+          <label for="bars" class="bars-icon">
+            <i class="fa-solid fa-bars bars"></i>
+          </label>
+        </div>
       </div>
+    </nav>
+    <div class="form-con">
+      <form action="">
+        <h1 class="form-title">Register</h1>
+        <p class="description">Join UsedMarket to buy and sell used products</p>
+        <div class="form-group">
+          <label for="fullname">Full Name</label>
+          <input type="text" id="fullname" class="text-input">
+      </div>
+      <div class="form-group">
+        <label for="email-input">Email</label>
+        <input type="email" id="email-input" class="text-input">
     </div>
-</body>
+        <div class="form-group">
+          <label for="password">Passowrd</label>
+          <input type="password" id="passowrd" class="text-input">
+          <p class="password-hint">Password must be at least 8 characters with letters and numbers</p>
+      </div>
+        <div class="form-group">
+          <label for="confirm-password">Confirm Password</label>
+          <input type="password" id="confirm-password" class="text-input">
+      </div>
+      <div class="terms-checkbox">
+        <input type="checkbox" id="terms">
+        <label for="terms">i agree to the <a href="">Terms of Services</a> and <a href="">Privacy Policy</a></label>
+      </div>
+      <input type="submit" class="submit-btn" value="Create Account">
+      <div class="auth-footer">
+        <p>Already have an account? <a href="">Log in here</a></p>
+      </div>
+      </form>
+    </div>
+<script src="../js/toggle-theme.js"></script>
+  </body>
 </html>
