Enhance login and register forms: add required attributes to inputs for validation, correct spelling of 'password', and improve HTML structure for consistency and accessibility.

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -57,11 +57,11 @@
             <p class="description">Welcome back! Log in to access your account</p>
             <div class="form-group">
                 <label for="email-input">Email</label>
-                <input type="email" id="email-input" class="text-input">
+                <input type="email" id="email-input" class="text-input" required>
             </div>
             <div class="form-group">
                 <label for="password-input">password</label>
-                <input type="passowrd" id="password-input" class="text-input">
+                <input type="passowrd" id="password-input" class="text-input" required>
             </div>
             <a class="forget-password">Forgot password?</a>
             <div class="remember-me-group">
