--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
   <head>
-        <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/form-styles.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../css/basics.css">
-    <link rel="stylesheet" href="../css/normlize.css">
-    <link rel="stylesheet" href="../css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/nav.css" />
+    <link rel="stylesheet" href="../css/form-styles.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/basics.css" />
+    <link rel="stylesheet" href="../css/normlize.css" />
+    <link rel="stylesheet" href="../css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -47,31 +50,48 @@
         <p class="description">Join UsedMarket to buy and sell used products</p>
         <div class="form-group">
           <label for="fullname">Full Name</label>
-          <input type="text" id="fullname" class="text-input">
-      </div>
-      <div class="form-group">
-        <label for="email-input">Email</label>
-        <input type="email" id="email-input" class="text-input">
-    </div>
+          <input type="text" id="fullname" class="text-input" required />
+        </div>
+        <div class="form-group">
+          <label for="email-input">Email</label>
+          <input type="email" id="email-input" class="text-input" />
+        </div>
         <div class="form-group">
           <label for="password">Passowrd</label>
-          <input type="password" id="passowrd" class="text-input">
-          <p class="password-hint">Password must be at least 8 characters with letters and numbers</p>
-      </div>
+          <input
+            type="password"
+            id="passowrd"
+            class="text-input"
+            minlength="8"
+            required
+          />
+          <p class="password-hint">
+            Password must be at least 8 characters with letters and numbers
+          </p>
+        </div>
         <div class="form-group">
           <label for="confirm-password">Confirm Password</label>
-          <input type="password" id="confirm-password" class="text-input">
-      </div>
-      <div class="terms-checkbox">
-        <input type="checkbox" id="terms">
-        <label for="terms">i agree to the <a href="">Terms of Services</a> and <a href="">Privacy Policy</a></label>
-      </div>
-      <input type="submit" class="submit-btn" value="Create Account">
-      <div class="auth-footer">
-        <p>Already have an account? <a href="">Log in here</a></p>
-      </div>
+          <input
+            type="password"
+            id="confirm-password"
+            class="text-input"
+            minlength="8"
+            required
+          />
+        </div>
+        <div class="terms-checkbox">
+          <input type="checkbox" id="terms" />
+          <label for="terms"
+            >i agree to the <a href="">Terms of Services</a> and
+            <a href="">Privacy Policy</a></label
+          >
+        </div>
+        <input type="submit" class="submit-btn" value="Create Account" />
+        <div class="auth-footer">
+          <p>Already have an account? <a href="">Log in here</a></p>
+        </div>
       </form>
     </div>
-<script src="../js/toggle-theme.js"></script>
+    <script src="../js/toggle-theme.js"></script>
   </body>
 </html>
