--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -69,7 +69,7 @@
                 <label for="remember-me">Remember me</label>
             </div>
             <button type="submit" class="submit-btn">Login</button>
-            <p class="register-msg">Don't have an account? <a>Register here</a></p>
+            <p class="register-msg">Don't have an account? <a href="../register">Register here</a></p>
         </form>
     </div>
     <script src="../js/toggle-theme.js"></script>
