--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -88,7 +88,7 @@
         </div>
         <input type="submit" class="submit-btn" value="Create Account" />
         <div class="auth-footer">
-          <p>Already have an account? <a href="">Log in here</a></p>
+          <p>Already have an account? <a href="../login">Log in here</a></p>
         </div>
       </form>
     </div>
