--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -24,7 +24,7 @@
                 <input type="checkbox" id="bars" class="nav-checkbox">
                 <ul>
                     <li>
-                        <a href="/home">
+                        <a href="../home">
                             🏠Home
                         </a>
                     </li>
@@ -34,12 +34,12 @@
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="../login">
                             🔑Login
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="../register">
                             📃Register
                         </a>
                     </li>
