--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -25,16 +25,16 @@
           <input type="checkbox" id="bars" class="nav-checkbox" />
           <ul>
             <li>
-              <a href="/home"> 🏠Home </a>
+              <a href="../home"> 🏠Home </a>
             </li>
             <li>
               <a> 📦Sell Item </a>
             </li>
             <li>
-              <a> 🔑Login </a>
+              <a href="../login"> 🔑Login </a>
             </li>
             <li>
-              <a> 📃Register </a>
+              <a href="../register"> 📃Register </a>
             </li>
           </ul>
           <button class="toggle-theme">🔆</button>
