Update input fields and styles for price range on homepage
- Added placeholder text to the minimum and maximum price input fields for better user guidance.
- Changed input text color to use the primary theme color for improved visual consistency.

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -61,8 +61,8 @@
     <div class="price">
       <h2>Price Range</h2>
       <div class="num">
-        <input type="number">
-        <input type="number">
+        <input type="number" placeholder="Min">
+        <input type="number" placeholder="Max">
       </div>
     </div>
     <button class="submit-btn">Apply Filters</button>
