Refactor filters and search section on homepage
- Updated HTML structure for the filters and search section, ensuring proper closing tags for input elements.
- Improved consistency in the layout by aligning the structure of the filters and search components.
- Enhanced accessibility by adding self-closing tags for input fields.

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/nav.css" />
-    <link rel="stylesheet" href="../css/form-styles.css">
+    <link rel="stylesheet" href="../css/form-styles.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../css/basics.css" />
     <link rel="stylesheet" href="../css/normlize.css" />
@@ -45,33 +45,33 @@
         </div>
       </div>
     </nav>
-<div class="cont">
-  <aside>
-    <h1 class="ti">Filters</h1>
-    <div class="filter-cat">
-      <h2>Categories</h2>
-      <select name="All Categories" id="">
-        <option value="All Categories">All Categories</option>
-        <option value="Electroncs">Electroncs</option>
-        <option value="Clothing">Clothing</option>
-        <option value="Books">Books</option>
-        <option value="Furniture">Furniture</option>
-      </select>
-    </div>
-    <div class="price">
-      <h2>Price Range</h2>
-      <div class="num">
-        <input type="number" placeholder="Min">
-        <input type="number" placeholder="Max">
+    <div class="cont">
+      <aside>
+        <h1 class="ti">Filters</h1>
+        <div class="filter-cat">
+          <h2>Categories</h2>
+          <select name="All Categories" id="">
+            <option value="All Categories">All Categories</option>
+            <option value="Electroncs">Electroncs</option>
+            <option value="Clothing">Clothing</option>
+            <option value="Books">Books</option>
+            <option value="Furniture">Furniture</option>
+          </select>
+        </div>
+        <div class="price">
+          <h2>Price Range</h2>
+          <div class="num">
+            <input type="number" placeholder="Min" />
+            <input type="number" placeholder="Max" />
+          </div>
+        </div>
+        <button class="submit-btn">Apply Filters</button>
+      </aside>
+      <div class="ser">
+        <h1>Search Products</h1>
+        <input type="search" placeholder="Search for items..." />
       </div>
     </div>
-    <button class="submit-btn">Apply Filters</button>
-  </aside>
-  <div class="ser">
-    <h1>Search Products</h1>
-    <input type="search" placeholder="Search for items...">
-  </div>
-</div>
 
     <script src="../js/toggle-theme.js"></script>
   </body>
